style.css
body {
  text-align: center;
  font-family: Arial;
}

h1 {
text-align: center;
}

#carousel-images {
  list-style: none;
  width: 2034px; /*((679 - 1) * 3)*/
  padding: 0px;
  margin: 0px;
  left: 2px; /*correction for li margin: -2px */
  position: relative;
  transition: left 0.5s ease

}

li {
  display: inline-block;
  margin: 0px -2px 0px -2px;
}

#carousel-container {
  margin-right: auto;
  margin-left: auto;
  background-color: black;
  width: 679px;
  height: 960px;
  overflow: hidden;
  /*display: inline-block;*/
}

#carousel-images:hover {

  
}

.mover-button {

  position: relative;
  top: 500px; /*(height / 2) + 20 */
  z-index: 2;
  border: solid 1px black;
  padding: 0.4em 0.6em 0.5em 0.6em;
  font-size: 2em;
  background-color: black;
  color: white;
}

.mover-button:hover {
  cursor: pointer;

}
#previous-button {
  display: inline-block;
  left: -400px; /*(width / 2) + 40*/
}

#next-button {
  display: inline-block;
  left: 400px; /*(width / 2) + 40*/
}

